--- a/templates/index.htm
+++ b/templates/index.htm
@@ -39,6 +39,7 @@
 </style>
 <head>
     <title>FastAPI video streaming</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body>
