--- a/templates/room.htm
+++ b/templates/room.htm
@@ -8,6 +8,7 @@
 
 <head>
     <title>FastAPI video streaming</title>
+    <link rel="icon"  type="image/x-icon"  href="/favicon.ico">
 </head>
 
 <body>
