--- a/templates/video_playback.htm
+++ b/templates/video_playback.htm
@@ -83,10 +83,13 @@
     const video = document.getElementById('video'); video.addEventListener('loadeddata', function () {}, false); 
     
     video.addEventListener('playing', (event) => {
+        console.log()
+        if (state != 'play') {
         sendMessage(event, 'play');
-    });
+}});
 
-    video.addEventListener('pause', (event) => {sendMessage(event, 'pause')
+    video.addEventListener('pause', (event) => {
+        if (state != 'pause') {sendMessage(event, 'pause')}
 });
 
     // document.getElementById('play').addEventListener('click', sendMessage);
@@ -101,11 +104,12 @@
     url = location.pathname.split('/'); var ws_url = '';
     console.log(url); var ws = new WebSocket(`ws://45.156.24.134:8000/room/${url[2]}/controls`);
     ws.onmessage = function (event) { console.log(event.data);
-        state = event.data
+        state = event.data;
         control(); 
-
     };
-    function sendMessage(event, text) { ws.send(text);
+    function sendMessage(event, text) { 
+    state = text;
+        ws.send(text);
     event.preventDefault(); }
 </script>
 
