--- a/templates/index.htm
+++ b/templates/index.htm
@@ -44,6 +44,7 @@
         background-color: #1f1f1f;
         border: none;
         border-radius: 15px;
+        width: 450px;
     }
 
     .login:hover {
@@ -113,7 +114,7 @@
 </style>
 
 <head>
-    <title>FastAPI video streaming</title>
+    <title>Watch together</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
