--- a/templates/room.htm
+++ b/templates/room.htm
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <style>
-    h1 {
+    h1,
+    h2 {
         padding-left: 20px;
+        margin-bottom: 0;
     }
 
     html {
@@ -25,7 +27,7 @@
         display: grid;
         column-gap: 1px;
         grid-template-columns: 80% 20%;
-        padding: 30px;
+        padding: 20px;
     }
 
     div.grid-item#list_grid {
@@ -38,6 +40,7 @@
 
     h1,
     h3,
+    h2,
     ul {
         color: #ADFF00;
     }
@@ -51,21 +54,31 @@
         font-size: 38px;
     }
 
+    ul {
+        list-style-type: none;
+        padding-inline-start: 0;
+    }
+
     li {
         margin-top: 10px;
         font-size: 18px;
+        padding-right: 10px;
+        border-radius: 10px;
+    }
+
+
+    .film:hover {
+        cursor: pointer;
+        background-color: #ADFF00;
+        color: #1f1f1f;
+    }
+
+    .film_elem{
+        padding-left: 10px;
     }
 
     video {
         border-radius: 15px;
-    }
-
-    *::-webkit-media-controls-panel {
-        color: #ADFF00;
-    }
-
-    *::-webkit-media-controls-play-button {
-        color: #ADFF00;
     }
 </style>
 
@@ -76,7 +89,7 @@
 
 <body>
     <h1> Hello in room {{id}}</h1>
-
+    <h2 id="cur_film"> You're currently watching </h2>
     <div class="grid-container">
         <div class="grid-item" id="video_grid">
             <video id='video' type="video/mp4" controls class="video_box" src="{{link}}">
@@ -97,13 +110,14 @@
 
     var needSeek = true;
 
-    var state = ' pause'; const video = document.getElementById('video'); video.addEventListener('loadeddata', () => {
+    var state = 'pause'; const video = document.getElementById('video'); video.addEventListener('loadeddata', () => {
         video.currentTime = '{{time}}';
         needSeek = false;
     }, false);
 
     if ('{{link}}' == '/video/') {
         video.style.display = "none";
+        document.getElementById('cur_film').textContent = "You're currently watching nothing!"
     }
     video.addEventListener('playing',
         (event) => {
@@ -153,6 +167,7 @@
             video.currentTime = event.data.split(' ')[1];
         }
         else if (event.data.includes('film: ')) {
+            document.getElementById('cur_film').textContent = "You're currently watching " + event.data.split(' ')[1]
             video.setAttribute('src', "/video/" + event.data.split(' ')[1]);
         }
     };
@@ -186,6 +201,7 @@
     console.log(myList);
 
     function Alert(film) {
+        document.getElementById('cur_film').textContent = "You're currently watching " + film
         video.setAttribute('src', '/video/' + film);
         video.style.display = "block";
         sendMessage(event, 'film: ' + film)
