--- a/templates/index.htm
+++ b/templates/index.htm
@@ -25,7 +25,7 @@
         margin-bottom: 10px;
     }
 
-    .main-box{
+    .main-box {
         padding: 30px;
         display: grid;
         grid-template-columns: 500px 700px;
@@ -69,8 +69,11 @@
         margin-top: 10px;
         font-weight: 700;
         margin-left: 20px;
+        list-style-type: none;
+        padding-inline-start: 0;
     }
-    ul li{
+
+    ul li {
         background-color: #1f1f1f;
         border-radius: 10px;
         margin-top: 20px;
@@ -106,11 +109,9 @@
         margin: 10px;
     }
 
-    .room_elem{
+    .room_elem {
         margin-left: 10px;
     }
-
-    
 </style>
 
 <head>
