--- a/templates/room.htm
+++ b/templates/room.htm
@@ -1,90 +1,13 @@
 <!DOCTYPE html>
 <html>
 <style>
-    h1,
-    h2 {
-        padding-left: 20px;
-        margin-bottom: 0;
-    }
 
-    html {
-        background: #373737;
-        font-family: 'SF Pro Display';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 14px;
-        /* or 150% */
-
-        letter-spacing: 0.02em;
-
-    }
-
-    .film:hover {
-        cursor: pointer;
-    }
-
-    .grid-container {
-        display: grid;
-        column-gap: 1px;
-        grid-template-columns: 80% 20%;
-        padding: 20px;
-    }
-
-    div.grid-item#list_grid {
-        padding-left: 10px;
-        grid-column: 2;
-        background-color: #252526;
-        border-radius: 20px;
-        height: 1080px;
-    }
-
-    h1,
-    h3,
-    h2,
-    ul {
-        color: #ADFF00;
-    }
-
-    h3 {
-        font-size: 28px;
-        margin-left: 10px;
-    }
-
-    h1 {
-        font-size: 38px;
-    }
-
-    ul {
-        list-style-type: none;
-        padding-inline-start: 0;
-    }
-
-    li {
-        margin-top: 10px;
-        font-size: 18px;
-        padding-right: 10px;
-        border-radius: 10px;
-    }
-
-
-    .film:hover {
-        cursor: pointer;
-        background-color: #ADFF00;
-        color: #1f1f1f;
-    }
-
-    .film_elem{
-        padding-left: 10px;
-    }
-
-    video {
-        border-radius: 15px;
-    }
 </style>
 
 <head>
     <title>Watch together</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='css/room.css') }}">
 </head>
 
 <body>
@@ -98,6 +21,14 @@
         <div class="grid-item" id="list_grid">
             <h3>Films list:</h3>
             <ul id="films_list"></ul>
+        </div>
+        <div class="grid-item" id="back_button">
+            <input id="login" type="submit" value="Leave room" onclick="return leave_room()" class="button">
+        </div>
+        <div class="grid-item" id="logs">
+            <h3>Logs</h3>
+            <ul id='messages'>
+            </ul>
         </div>
 
     </div>
@@ -154,10 +85,12 @@
 
 
     // WebSocket part
+    var logs = document.getElementById('messages')
 
     var url = location.pathname.split('/');
-    console.log(url); var ws = new WebSocket(`ws://{{server}}:8000/room/${url[2]}/controls`);
+    console.log(url); var ws = new WebSocket(`ws://{{server}}:8000/room/${url[2]}/controls?name=test`);
     ws.onmessage = function (event) {
+        console.log(event.data)
         if (event.data.includes('state: ')) {
             state = event.data.split(' ')[1];
             control();
@@ -170,7 +103,19 @@
             document.getElementById('cur_film').textContent = "You're currently watching " + event.data.split(' ')[1]
             video.setAttribute('src', "/video/" + event.data.split(' ')[1]);
         }
+        else if (event.data.includes('connected') || event.data.includes('disconnected')) {
+            var message = document.createElement('li')
+            var content = document.createTextNode(event.data)
+            message.appendChild(content)
+            logs.appendChild(message);
+            logs.scrollTo(0, logs.scrollHeight);
+        }
     };
+
+    ws.addEventListener('open', (event) => {
+        ws.send(`{{name}} connected`);
+    });
+
     function sendMessage(event, text) {
         if (text.includes('state')) {
             state = text;
@@ -209,6 +154,10 @@
 
     function film_link() {
         document.user_form.action = location.pathname + '/url';
+    }
+
+    function leave_room() {
+        document.location.href = '/'
     }
 </script>
 
