--- a/static/css/room.css
+++ b/static/css/room.css
@@ -6,7 +6,7 @@ h2 {
 
 html {
     background: #373737;
-    font-family: 'SF Pro Display';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
