--- a/templates/index.htm
+++ b/templates/index.htm
@@ -5,6 +5,9 @@
     <title>Watch together</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='css/index.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +27,7 @@
         </form>
 
         <ul id="rooms_list">
-            Rooms: 
+            Rooms:
         </ul>
     </div>
 </body>
